style.css
body{
    margin: 0;
}

.wrapper{
    /* background-color: #61dafb; */
    /* margin: -20%; */
    background: url("./img/mountain.jpg");
    background-size: cover;
    height: 100vh;
    text-align: center;
}
  
.inner{
    margin: 5% 10% 0 10%;
    background-color: rgba(0,0,0,0.8);
    padding: 10%;
    border-radius: 15px;
    color: white
  }

.spacer{
    height: 10%;
}

h1{
    font-family: 'Josefin Sans', sans-serif;
    font-size: 2.5em;
    font-weight: 900;
}

p{
    font-family: sans-serif;
    font-size: 1.1em;
}

.email{
    border-radius: 5px;
}

#mc-embedded-subscribe{
    padding: 8px 15px 8px 15px;
    border-radius: 5px;
    border: 0;
    color: white;
    font-weight: 900;
    background-color: #f68528;
    font-size: 1.2em;
}

@media only screen and (max-width: 1000px) {
    .email{
        width: 75%;
        font-size: 1.3em;
    }
}

@media only screen and (min-width: 1000px) {
    .email{
        width: 50%;
        font-size: 1.3em;
      }
}

.mailchimp{
    color: #111111
}

#mc-embedded-subscribe, #mce-EMAIL{
    display: inline-block;
}

